# ssn-wagtail

./: .gitignore  .pre-commit-config.yaml  README.md
.github/: dependabot.yml
.github/workflows/: test.yml
wagtail_site/: .dockerignore  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml  template.env
wagtail_site/search/tests/: test_views.py
wagtail_site/wagtail_site/: wsgi.py
wagtail_site/wagtail_site/settings/: base.py  dev.py  production.py
wagtail_site/wagtail_site/templates/: base.html
